--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -12,6 +12,7 @@
                     <div class="details">
                         <p><b>- 올리브영 ERP 시스템 운영/개발</b>
                         <br>&nbsp - 유통 비즈니스 프로세스 정의 및 시스템 설계/개발
+                        <br>&nbsp - 비즈니스 및 시스템 변경 영향도 분석
                         <br>&nbsp - SCM, 발주, 매출, 재고, 상품, 프로모션, 멤버십 모듈 운영/개발
                         <br>&nbsp - 정보보안 담당(서버 및 서비스 보안관리)<br> </p>
 
