--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,14 +3,21 @@
                 <div class="intro">
                 </div><!--//intro-->
                 <div class="item">
-                  <h4 class="project-title">올리브영 ERP 차세대 프로젝트 (100억 규모)</h4>
-                  <span class="project-tagline">2015년 5월 - 2016년 9월</span>
+                  <h4 class="project-title"><b>올리브영 ERP 차세대 프로젝트 (100억 규모)</b></h4>
+                  <span class="project-tagline"><i>2015년 5월 - 2016년 9월</i></span>
                       <br>- 업무정의 및 시스템 설계, 개발, 테스트, 배포 전 과정 참여<br>
                 </div><!--//item-->
                 <div class="item">
                   <br>
-                    <span class="project-title">올리브영 SCM 고도화 프로젝트</span>
+                    <span class="project-title"><b>올리브영 SCM 고도화 프로젝트</b></span>
                       <br>- 올리브영 <-> 대한통운 물류이동 트래킹
-                      <br>- 올리브영 <-> 대한통운 WMS 재고/수불 개선
+                      <br>- 올리브영 <-> 대한통운 WMS 재고/수불 개선<br><br>
+                </div><!--//item-->
+                <div class="item">
+                  <span class="project-title"><b>올리브영 멤버십 고도화 프로젝트</b></span><br>
+                  <span class="project-tagline"><i>고객정보보호 강화를 위한 고도화 프로젝트</i></span>
+                      <br>- 장기 미사용 고객정보 물리적/논리적 분리
+                      <br>- 구매내역 기반의 고객연락번호 미공개 문자발송 서비스
+                      <br>&nbsp&nbsp<u>(도입 후 운영성과로 CGV에서 벤치마킹)</u><br><br>
                 </div><!--//item-->
             </section><!--//section-->
