--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -3,7 +3,7 @@
 <h2 class="section-title"><i class="fa fa-user"></i> Software Engineer</h2>
 <div class="summary">
     <p> 안녕하세요, 화장품가게에서 4년째 시스템 운영/개발을 하고 있는 Software Engineer 김선미입니다.</p>
-    <p> 현재 Spring Framework 환경에서 유통 시스템을 운영/개발을 하고 있으며, Java와 Spring Framework 구조의 이해, 서버통신, 자유로운 DB 활용 능력과 보유하고 있습니다.</p>
+    <p> 현재 Spring Framework 환경에서 유통 시스템을 운영/개발을 하고 있으며, Java와 Spring Framework 구조의 이해, 서버통신, 자유로운 DB 활용 능력을 보유하고 있습니다.</p>
     <p> 더불어 유통업의 특성상 업무간 유기성이 높고, 타 시스템과의 연계가 활발히 이루어지는 만큼 비즈니스와 시스템 변경 영향도 파악에 능숙합니다.</p>
     <p> 변화와 도전을 즐깁니다. 지속적으로 새로운 기술들을 경험하고 습득하여, 흩어진 정보를 누구나 쉽게 활용하고 세상을 이롭게 하는 엔지니어가 되겠습니다.</p>
     <!--<a href="#" target="_blank">download this free resume/CV template here</a>. -->
